# hypertwobits

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: criterion.yml  rust.yml
benches/: insert.rs
data/: Ulysses.csv  War_and_Peace.csv
examples/: accuracy.rs
scripts/: README.md  advanced_statistics.py  plot_histogram.py  plot_parametrized.py  plot_progression.py  plot_whisker.py  welch_ttest.py
src/: h2b.rs  h3b.rs  hbb64.rs  htb.rs  hyper_two_bits.rs  lib.rs  prelude.rs
src/h2b/: sketch.rs  tests.rs
src/h3b/: sketch.rs  tests.rs
src/htb/: sketch.rs
src/hyper_two_bits/: sketch.rs  tests.rs
stats/: combined-1000.json  combined-10000.json  combined-100000.json  combined-all.json  shakespeare-100.json  shakespeare-1000.json  shakespeare-10000.json  shakespeare-all.json  ulysses-1000.json  ulysses-10000.json  ulysses-100000.json  ulysses-all.json  war_and_peace-100.json  war_and_peace-1000.json  war_and_peace-10000.json  war_and_peace-all.json
