[package]
name = "hypertwobits"
version = "0.1.0"
edition = "2021"
description = "HyperTwoBits cardinality estimation algorithm"
license = "MIT OR Apache-2.0"
authors = ["Heinz Gies <heinz@axiom.co>"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
repository = "https://github.com/axiomhq/hypertwobits"
documentation = "https://docs.rs/hypertwobits/"

[[bench]]
name = "insert"
harness = false

[[example]]
name = "accuracy"

[dependencies]
ahash = "0.8.11"
mem_dbg = {version="0.2.4", optional=true}
rand = { version = "0.8" }
siphasher = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.5.1"
hyperbitbit = "0.0.1-alpha.2"
hyperloglog = "1.0.2"
hyperloglogplus = "0.4.1"
itertools = "0.13.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
siphasher = "1.0.1"

[features]
default = ["siphash"]
siphash = ["dep:siphasher"]
